--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,23 +1,30 @@
 #all-spot-cards {
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-areas: ".spot-card" ".spot-card";
-    grid-gap: 20px
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    margin-left: 6vw;
+    margin-right: 6vw;
+    justify-items: space-between;
 }
 
 .spot-card {
     display: grid;
     grid-template-rows: 1.5fr;
     grid-template-areas: "image" "text";
-    border: 20px;
-    box-shadow: 5px;
+    width: 250px;
 }
 
 .spot-image {
     display: block;
     width: 100%;
-    max-height: 200px;
+    max-height: 230px;
     align-self: center;
+}
+
+.image-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 230px;
 }
 
 .spot-location-and-rating {
@@ -28,7 +35,7 @@
 .spot-text {
     grid-area: text;
     align-content: center;
-    margin: 5px 15px;
+    margin: 5px 15px; 
 }
 
 .spot-cost {
