--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,16 +1,31 @@
-nav {
+.nav-bar {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     font-size: 1.25rem;
-    margin-left: 0px;
-    margin-right: 0px;
     margin-bottom: 20px;
+    border-bottom: solid 2px lightgrey;
+    padding-right: 10px;
+    padding-left: 5px;
 }
 
-#profileButton {
+#profile-button {
     position: absolute;
     right: 0px;
-    top: 20px;
+}
+
+#home {
+    margin-bottom: 15px;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+#home-text {
+    font-size: 18px;
+    color: black;
+    font-weight: bold;
+    font-variant: small-caps;
 }
