--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,19 +1,47 @@
 #spot-image-container {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:    '#preview-image .spot-images .spot-images'
-                            '#preview-image .spot-images .spot-images';
+    grid-template-columns: minmax(25px, 500px) minmax(10px, 240px) minmax(10px, 240px);
+    grid-template-rows: minmax(10px, 240px) minmax(10px, 240px);
+    grid-template-areas:    'preview'
+                            'preview';
+    grid-gap: 5px;
 }
 
-#preview-image {
-    object-fit: fill;
+.preview-container {
+    grid-area: preview;
+    border: solid 1px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.preview-image {
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+    justify-self: center;
+    align-self: center;
+}
+
+.image-container {
+    border: solid 1px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .spot-images {
-    object-fit: cover;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .grey-box {
     background-color: grey;
+}
+
+#spot-page {
+    max-width: 1000px;
+    margin-left: 6vw;
+    margin-right: 6vw;
 }
